...
    <string name="profile_fab_tooltip_addProfile">Utwórz profil</string>
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
    <string name="prof_rc_firstLine">Example</string>
    <string name="expcat_rc_name">Example</string>
...
    <string name="schpay_editform_createTransaction">Utwórz transakcję</string>
    <string name="schpay_create_transaction_info_create">Tworzenie transakcji<br /> na podstawie<br /> zaplanowanej płatności</string>
    <string name="schpay_create_transaction_spin_cat_info">"Kategoria: "</string>
    <string name="schpay_create_transaction_spin_budget_info">Budżet:</string>
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
    <string name="stat_overall_rb">dla całości</string>
    <string name="stat_budget_rb">dla określonego budżetu</string>
    <string name="stat_period_rb">dla określonego przedziału czasowego</string>
    <string name="stat_submit">Pokaż statystyki</string>
...
    <string name="set_people_in_household_info">Liczba osób w gosp. dom.</string>
    <string name="set_night_mode_info">Tryb nocny:</string>
    <string name="set_save_button">Zapisz ustawienia</string>
    <string name="set_timepicker_dialog_title">Wybierz godzinę</string>
    <string name="sholist_tooltip">Utwórz listę zakupów</string>
    <string name="sholist_empty_text">Jak widzisz, nie ma tutaj żadnej listy zakupów, stwórz ją!</string>
    <string name="sholist_rc_name">Test name</string>
    <string name="sholist_rc_date">1900-01-01</string>
    <string name="sholist_rc_desc">description</string>
    <string name="sholist_rc_num_of_prod_and_value_info">produktów o wartości:</string>
    <string name="sholist_rc_value">123</string>
    <string name="sholist_rc_currency">zł</string>
    <string name="sholist_rc_num_of_prod">1</string>
    <string name="sholist_create_info_login">Tworzenie listy zakupów</string>
    <string name="sholist_createform_text_name">Nazwa listy zakupów</string>
    <string name="sholist_createform_submit">Utwórz listę zakupów</string>
    <string name="sholist_createform_text_description">Dodatkowy opis, komentarz</string>
    <string name="menu_sort_action_sort_name_asc">Nazwa alfabetycznie</string>
    <string name="menu_sort_action_sort_name_desc">Nazwa odwrotnie alfabetycznie</string>
    <string name="shopping_button_edit">Edytuj atrybuty listy</string>
    <string name="shopping_button_delete">Usuń listę</string>
    <string name="sholist_edit_info_login">Edycja listy zakupów</string>
    <string name="sholist_editform_text_name">Nazwa listy zakupów</string>
    <string name="sholist_editform_text_description">Dodatkowy opis, komentarz</string>
    <string name="sholist_editform_submit">Edytuj listę zakupów</string>
    <string name="sholist_deleteform_info_delete">Usuwanie listy zakupów</string>
    <string name="sholist_deleteform_delete">Czy chcesz usunąć tę listę zakupów?</string>
    <string name="sholist_deleteform_submit">Usuń listę zakupów</string>
    <string name="shocont_empty_text">Jak widzisz, nie ma tutaj żadnych produktów, dodaj je!</string>
    <string name="shocont_rc_name">Example</string>
    <string name="shocont_rc_value">1375.99</string>
    <string name="shocont_rc_currency">zł</string>
    <string name="shocont_rc_amount">3.75</string>
    <string name="shocont_rc_unit">kg</string>
    <string name="shocont_fab_addShoCont">Dodaj produkt do listy</string>
    <string name="shocont_createform_unit_defvalue">szt.</string>
    <string name="shocont_create_info_shocont">Dodawanie produktu do listy</string>
    <string name="shocont_createform_text_name">Nazwa produktu</string>
    <string name="shocont_createform_submit">Dodaj produkt</string>
    <string name="shocont_createform_text_value">Wartość produktu</string>
    <string name="shocont_createform_text_unit">Jednostka produktu</string>
    <string name="shocont_createform_text_amount">Ilość/liczba produktów</string>
    <string name="menu_sort_action_sort_unit_asc">Jednostka alfabetycznie</string>
    <string name="menu_sort_action_sort_unit_desc">Jednostka odwrotnie alfabetycznie</string>
    <string name="shocont_editform_unit_defvalue">szt.</string>
    <string name="shocont_edit_info_shocont">Edytowanie produktu w liście</string>
    <string name="shocont_editform_text_name">Nazwa produktu</string>
    <string name="shocont_editform_submit">Edytuj produkt</string>
    <string name="shocont_editform_text_value">Wartość produktu</string>
    <string name="shocont_editform_text_unit">Jednostka produktu</string>
    <string name="shocont_editform_text_amount">Ilość/liczba produktów</string>
    <string name="shocont_deleteform_info_delete">Usuwanie produktu z listy</string>
    <string name="shocont_deleteform_submit">Usuń produkt</string>
    <string name="profile_createform_currency">Waluta (domyślnie: zł)</string>
    <string name="receipt_rc_name">Test name</string>
    <string name="receipt_rc_date">1900-01-01</string>
    <string name="receipt_rc_desc">description</string>
    <string name="receiptlist_empty_text">Jak widzisz, nie ma tutaj żadnego paragonu, dodaj go!</string>

...
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
    <string name="income_createincome_value_error_empty">Podaj wartość przychodu.</string>
    <string name="expense_createexpense_value_error_empty">Podaj wartość wydatku.</string>
    <string name="receipt_createreceipt_name_error_empty">Podaj nazwę paragonu.</string>
    <string name="receipt_createreceipt_name_error_syntax">Nazwa paragonu powinna składać się z co najmniej dwóch liter.</string>
    <string name="sholist_createsholist_name_error_syntax">Nazwa listy powinna składać się z co najmniej dwóch liter.</string>
    <string name="sholist_createsholist_name_error_empty">Podaj nazwę listy zakupów.</string>
    <string name="shocont_createshocont_name_error_empty">Podaj nazwę produktu.</string>
    <string name="shocont_createshocont_name_error_syntax">Nazwa produktu powinna składać się z 2-25 znaków.</string>
    <string name="shocont_createshocont_name_error_existing">W liście znajduje się już produkt z podaną nazwą.</string>
    <string name="shocont_createshocont_amount_error_empty">Podaj ilość/liczbę produktów.</string>
    <string name="shocont_createshocont_amount_error_syntax">Ilość/liczba powinna składać się wyłącznie z liczb.</string>
    <string name="shocont_createshocont_unit_error_empty">Podaj jednostkę produktu.</string>
    <string name="shocont_createshocont_unit_error_syntax">Jednostka produktu nie może zawierać cyfr.</string>

</resources>
