...
        android:layout_below="@id/shopping_bud_info"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/shopping_button_delete"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shocont_list_rc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/shopping_button_edit"
        android:layout_marginTop="20dp"
        />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shopping_fab_addShoCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/flat_plus_background"
        app:tint="@null"
...
