...
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/shocont_rc_currency"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/shocont_rc_deleteicon"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/shocont_rc_currency"
        android:textSize="12sp"
        android:textStyle="italic" />

...
